@@ -30,6 +30,32 @@ class "HealAbsorbBar"
 	end
 
 	------------------------------------------------------
+	-- Method
+	------------------------------------------------------
+	local oldSetValue = Super.SetValue
+	local oldSetMinMaxValues = Super.SetMinMaxValues
+	local oldGetWidth = Super.GetWidth
+
+	function SetValue(self, value)
+		if self.__Value ~= value then
+			self.__Value = value
+
+			oldSetValue(self, value)
+
+			local width = oldGetWidth(self)
+
+			if self.__HealthBar then
+				self:SetPoint("TOPLEFT", self.__HealthBar.StatusBarTexture, "TOPRIGHT", - width * value / self.__MaxHealth, 0)
+			end
+		end
+	end
+
+	function SetMinMaxValues(self, min, max)
+		self.__MaxHealth = max
+		oldSetMinMaxValues(self, min, max)
+	end
+
+	------------------------------------------------------
 	-- Property
 	------------------------------------------------------
 	doc [======[
@@ -50,9 +76,13 @@ class "HealAbsorbBar"
 				_HealAbsorbBarMap[value] = self
 
 				self:ClearAllPoints()
-				self:SetPoint("TOPRIGHT", value.StatusBarTexture, "TOPRIGHT")
+				self:SetPoint("TOPLEFT", value.StatusBarTexture, "TOPRIGHT")
 				self.FrameLevel = value.FrameLevel + 2
 				self.Size = value.Size
+
+				self.OverGlow:ClearAllPoints()
+				self.OverGlow:SetPoint("BOTTOMRIGHT", value, "BOTTOMLEFT", 7, 0)
+				self.OverGlow:SetPoint("TOPRIGHT", value, "TOPLEFT", 7, 0)
 
 				value.OnSizeChanged = value.OnSizeChanged + OnSizeChanged
 			end
@@ -60,9 +90,68 @@ class "HealAbsorbBar"
 		Type = StatusBar,
 	}
 
+	property "OverAbsorb" {
+		Storage = "__OverAbsorb",
+		Set = function(self, value)
+			if self.__OverAbsorb ~= value then
+				self.__OverAbsorb = value
+				self.OverGlow.Visible = value
+			end
+		end,
+	}
+
+	property "HasIncomingHeal" {
+		Storage = "__HasIncomingHeal",
+		Set = function(self, value)
+			if self.__Value == 0 then
+				value = true
+			end
+
+			if self.__HasIncomingHeal ~= value then
+				self.__HasIncomingHeal = value
+				self.LeftShadow.Visible = not value
+			end
+		end,
+	}
+
+	property "HasAbsorb" {
+		Storage = "__HasAbsorb",
+		Set = function(self, value)
+			if self.__HasAbsorb ~= value then
+				self.__HasAbsorb = value
+				self.RightShadow.Visible = value
+			end
+		end,
+	}
+
 	------------------------------------------------------
 	-- Constructor
 	------------------------------------------------------
     function HealAbsorbBar(self)
+    	self.__MaxHealth = 0
+
+    	self.StatusBarTexturePath = [[Interface\RaidFrame\Absorb-Fill]]
+
+    	local leftShadow = Texture("LeftShadow", self)
+    	leftShadow.TexturePath = [[Interface\RaidFrame\Absorb-Edge]]
+		leftShadow:SetPoint("TOPLEFT", self.StatusBarTexture, "TOPLEFT", 0, 0)
+		leftShadow:SetPoint("BOTTOMLEFT", self.StatusBarTexture, "BOTTOMLEFT", 0, 0)
+		leftShadow.Visible = false
+		leftShadow.Width = 8
+
+    	local rightShadow = Texture("RightShadow", self)
+    	rightShadow.TexturePath = [[Interface\RaidFrame\Absorb-Edge]]
+    	rightShadow:SetTexCoord(1, 0, 0, 1)
+		rightShadow:SetPoint("TOPLEFT", self.StatusBarTexture, "TOPRIGHT", -8, 0)
+		rightShadow:SetPoint("BOTTOMLEFT", self.StatusBarTexture, "BOTTOMRIGHT", -8, 0)
+		rightShadow.Visible = false
+		rightShadow.Width = 8
+
+    	local overGlow = Texture("OverGlow", self)
+
+    	overGlow.BlendMode = "ADD"
+    	overGlow.TexturePath = [[Interface\RaidFrame\Absorb-Overabsorb]]
+    	overGlow.Width = 16
+    	overGlow.Visible = false
     end
 endclass "HealAbsorbBar"
